# paxconsola

./: .gitignore  1.txt  2.txt  Cargo.toml  README.md  a.txt  b.txt  check.sh  checklist.md  dump.txt  help.txt  help2.txt  huh.txt  run_tests.sh  run_tests_opt.sh  test.txt  test2.txt  todo.sh  toomuch.txt  what.fs
consoles/c64/: .gitignore  Makefile  acid-test.pax  acid-test.pax.dump  acid-test1.pax.dump  acid-test2.pax  acid-test2.pax.dump  acid-test3.pax  acid-test3.pax.dump  acid-test4.pax.dump  acid-test5.pax  acid-test5.pax.dump  c64.lib  compile_c64.sh  fork_world.fth  generated.asm  paxconsola.asm  paxconsola.lbl  paxconsola.lst  paxconsola.map  paxconsola.prg  paxconsola.s  paxconsola.vs  paxconsola_generated.asm  snake.fth  snake.fth.dump  snake.pax  snake.pax.dump  snake_world.fth  sword_world.fth  test.fth  test1.fth  test4.fth
consoles/dos/: Makefile  fork_world.fth  myfile.asm  myfile.com  snake_world.fth  sword_world.fth
consoles/gb/: Makefile  paxconsola.gb  paxconsola.map  paxconsola.sym  snake.fth  sword_world.fth
consoles/microvision/: Makefile  README.md  dump.py  frameset.html  lfsr-encode.py
consoles/odyssey2/: Makefile  hello.p
desktop/: Cargo.toml
desktop/src/: main.rs
doc/: Makefile  additional.css  book.toml
doc/src/: 01-introduction.md  02-game-examples.md  03-annex.md  SUMMARY.md  about.md  engine-libra.md  engines.md  introduction.md  opcodes.md  pax-forth.md  pix-consola.md  sec-components.md  sec-cpus.md  sec-pax-forth-guide.md
doc/theme/: index.hbs
emularity/: Makefile  emulator-style.css  serve.py
emularity/c64/: index.html  paxconsola-fork.prg
emularity/console/: index.html
emularity/dos/: index.html
emularity/gameboy/: index.html
emularity/none/: index.html
etc/forc/: hello.c
examples/: 2drop.fs  addition.fs  check.rs  code.fs  constprop.fs  euler001.fs  gb.txt  if.fs  invert-2.fs  invert.fs  loop-simple.fs  loop.fs  loopimpl.fs  loopimpl2.fs  memory.fs  modulus.fs  multiply.fs  opt-expanded.fs  opt-inline.fs  power.fs  recurse-power.fs.disabled  recurse.fs  snake.txt  snakereduce.txt  variable.fs  xtreme-euler001.fs
examples/_disabled/: random.fs.disabled  recurse-euler001.fs.disabled
forc/: .gitignore  hello.asm
games/: fork_world.fth  snake_world.fth  snake_world_gb.fth  sword_world.fth  sword_world_c64.fth
games/cave-world/: cave-obj.fth  cave.fth
games/fork-world/: fork_world.fth
ide/: Cargo.toml  deploy.sh
ide/src/: lib.rs  main.rs
ide/static/: index.html  rgbfix.js  test.asm
json/: buf.fth  buf.pax  case.fth  json-test.fth  json.pax  map-test.fth  map.pax  struct.fth
lib/: prelude.fth
lib/json/: json-test.fth
lib/libra/: prelude-c64.fth  prelude-gameboy.fth  prelude-wasm.fth
paxconsola-desktop/: Cargo.toml  snake.fth  snake.pax
paxconsola-desktop/src/: main.rs
paxconsola-ide/: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  build-all.sh  compile-workers.sh  deploy.sh  index.html
paxconsola-ide/snake/gb/: Makefile  paxconsola.gb  paxconsola.sym  snake.pax
paxconsola-ide/src/: default_ui.fth  lib.rs  lib.txt  ui.rs  workers.rs
paxconsola-ide/static/: index.html  paxconsola.css  rgbasm.js  rgbasm.wasm  rgblink.js  wasmboy.ts.umd.js
paxconsola-ide/static/about/: index.html
paxconsola-ide/static/emulators/: README.md  emulator-style.css  index.html
paxconsola-ide/static/emulators/c64/: index.html  paxconsola.prg  vice.cfg
paxconsola-ide/static/emulators/dos/: PAXCNSLA.COM  index.html
paxconsola-ide/static/emulators/gameboy/: index.html  paxconsola.gb
paxconsola-ide/template/c64/: compile_c64.sh  generated.asm  paxconsola.lst  paxconsola.map  paxconsola.prg  snake.pax
paxconsola-ide/template/gb/kernel/: bank0.asm
paxconsola-ide/template/gb/src/: paxconsola.asm
paxforth/: Cargo.toml  out-regular  out-walker
paxforth/lib/json/: json-test.fth
paxforth/lib/libra/: prelude-gameboy.fth
paxforth/src/: analyze.rs  ast.rs  check.rs  debug.rs  lib.rs  location.rs  optimize.rs  parse.rs  parse_old.rs  parse_util.rs  prelude.fth  prelude.rs  superpax.rs  targets.rs
paxforth/src/analyze/: _analyze.txt  _optimize.txt  facts.rs  graph.rs  inline.rs  mod.rs  optimize.rs  reduce_branches.rs  strip.rs  util.rs  walker.rs
paxforth/src/parse/: mod.rs  parse_util.rs  put_back.rs  tokenizer.rs
paxforth/src/program/: _analyze.txt  _facts.txt  _optimize.txt  _optimize2.txt  analyze.rs  constants.rs  dead_code.rs  graph.rs  inline.rs  mod.rs  optimize.rs  strip.rs  walker.rs
paxforth/src/runner/wasm/: mod.rs  stdweb.rs  wasmtime.rs
paxforth/src/targets/: c64.rs  dos.rs  gb.rs  mod.rs  tom1.rs  wasm.rs  wasm_template.wat
paxforth/src/targets/c64/: compile.rs
paxforth/src/targets/gb/: compile.rs
paxforth/src/targets/tom1/: compile.rs
paxforth/src/targets/wasm/: compile.rs  stdweb.rs  wasmtime.rs
paxforth/tests/: check.rs
paxforth/tests/check/: 2drop.fs  2over.fth  addition.fs  allocate.fs  begin-leave.fth  begin.fth  case-a.fth  case-begin.fs  case-begin.fth  case.fs  case.fth  compare.fth  emit.fth  fail.fth  fn.fs  if-in-loop.fs  if-in-loop.fth  if.fth  invert.fs  invert.fth  json-parse.fs  json-parse.fth  json-test.fth  json-test_breaks-inline.txt  loop-do.fth  loop-simple.fs  loop.fth  loopimpl.fs  loopimpl2.fs  map-test.fth  memory.fth  modulus.fth  multiply.fth  noname.fs  opt-1.fth  opt-2.fth  opt-3.fth  override.fs  override.fth  pixel.fs.disabled  (+9 more)
pixconsola/: Cargo.toml  out.raw
pixconsola/src/: c64.rs  ega.rs  lib.rs  main.rs
pixconsola/tests/: conversion.rs
snake-pax/: README.md
snake-pax/src/: bank0.asm  header.asm  pax_generated.asm  tiles.asm
snake/gb/: Makefile  NOTES.md  bank0.asm  dbg-corruptstack.sna  dbg-lessthan.sna  dbg-wideif.sna  gb.gb  gb.map  gb.sym  header.asm  pax_generated.asm  pax_generated.txt  paxconsola.gb  paxconsola.map  paxconsola.sym  (+1 more)
src/: analyze.rs  compile.rs  compile_c64.rs  compile_gb.rs  compile_tom.rs  compile_wasm.rs  eval.rs  ir.rs  lib.rs  location.rs  main.rs  optimize.rs  parse.rs  prelude.rs  reduce.rs  superpax.rs  tokenizer.rs  vm.rs  wasm.rs
template/: README.md
tests/: examples.rs
(+70 files in other folders)
