[package]
name = "paxconsola"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1"
maplit = "*"
num-traits = "0.2"
num-derive = "0.3"
glob = "*"
rand = "*"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
lazy_static = "1.4.0"
indexmap = { version = "*", features = [ "serde-1" ] }
# color-backtrace = { version = "0.3" }
percent-encoding = "*"
itertools = "0.8.2"
petgraph = "0.5.0"
wat = "1"

# choose a wasm implementation
wasm3 = { git = "https://github.com/Veykril/wasm3-rs", rev = "7257d2b24b0d5398c238908cc055f37d675bcad9", optional = true }
stdweb = { version = "*", optional = true }
wasmi = { version = "*", default-features = false, features = [ "core" ], optional = true }
serde = { version = "1.0.104", features = [ "derive" ] }

[features]
default = ["wasm3"]
