[package]
name = "ide"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11.0"
paxconsola = { path = "../", default-features = false }
stdweb = "*"
indexmap = "*"

[profile.release]
debug = true
