[package]
name = "ide"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"

[dependencies]
yew = "0.11.0"
paxconsola = { path = "../", default-features = false, features = ["stdweb"] }
stdweb = "*"
indexmap = "*"
serde = "1.0.104"

[profile.release]
debug = true

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "compilation_worker"
path = "src/bin/compilation_worker.rs"
