[package]
name = "paxconsola-ide"
version = "0.1.0"
authors = ["Tim Ryan <tim@timryan.org>"]
edition = "2018"

[dependencies]
yew = "0.11.0"
paxforth = { path = "../paxforth", default-features = false, features = ["stdweb"] }
stdweb = "*"
indexmap = "*"
serde = "1.0.104"
include_dir = "0.5.0"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "compilation_worker"
path = "src/bin/compilation_worker.rs"
