[package]
name = "ide"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"

[dependencies]
yew = "0.18.0"
paxforth = { path = "../paxforth", default-features = false, features = ["stdweb"] }
indexmap = "*"
serde = "1.0.104"
include_dir = "0.5.0"
wasm-bindgen = "0.2.78"
gloo-timers = "0.2.1"
js-sys = "0.3.51"
wat = "1.0.38"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "compilation_worker"
path = "src/bin/compilation_worker.rs"
