[package]
name = "ide"
version = "0.1.0"
authors = ["Tim Ryan <trim@fb.com>"]
edition = "2018"
publish = false

[dependencies]
yew = "0.18.0"
paxforth = { path = "../paxforth", default-features = false, features = ["web"] }
indexmap = "*"
include_dir = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
gloo-timers = "0.2.1"
gloo-console = "0.1"
js-sys = "0.3.51"
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope", "console", "WorkerLocation"] }
wat = "1.0.38"
maplit = "1.0.2"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "compilation_worker"
path = "src/bin/compilation_worker.rs"
