[package]
name = "paxforth"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1"
maplit = "*"
num-traits = "0.2"
num-derive = "0.3"
glob = "*"
rand = "*"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
lazy_static = "1.4.0"
indexmap = { version = "*", features = [ "serde-1" ] }
percent-encoding = "*"
itertools = "0.8.2"
petgraph = "0.5.0"
wat = "1"
serde = { version = "1.0.104", features = [ "derive" ] }
enum-utils = "0.1.2"
derive_more = "0.99.5"
anyhow = "1.0.28"
snailquote = "0.3"
take_mut = "0.2.2"
crossterm = "0.20"

# logging
log = "0.4.0"
env_logger = "0.8.4"

# wasm target (web / native)
stdweb = { version = "*", optional = true }
wasmtime = { version = "0.13.0", optional = true }

[features]
default = ["wasmtime"]

[dev-dependencies]
ctor = "0.1.20"
