[package]
name = "paxforth"
version = "0.2.0"
edition = "2018"
license = "MIT"
documentation = "http://paxconsola.com/book/"
homepage = "http://paxconsola.com/"
description = "Pax Forth programming language for Pax Consola, a development environment for vintage computers and consoles."

[dependencies]
regex = "1"
maplit = "1"
num-traits = "0.2"
num-derive = "0.3"
glob = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"]}
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
lazy_static = "1.4.0"
indexmap = { version = "1", features = [ "serde-1" ] }
percent-encoding = "2"
itertools = "0.10"
petgraph = "0.5.0"
wat = "1"
serde = { version = "1.0.104", features = [ "derive" ] }
enum-utils = "0.1.2"
derive_more = "0.99.5"
anyhow = "1.0.28"
snailquote = "0.3"
take_mut = "0.2.2"

# logging
log = "0.4.0"
env_logger = "0.8.4"

# cli
crossterm = { version = "0.20", optional = true }

# wasm target (web / native)
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true }
wasmtime = { version = "0.13.0", optional = true }

[features]

default = ["wasmtime", "crossterm"]

web = ["js-sys", "web-sys", "wasm-bindgen"]

[dev-dependencies]
ctor = "0.1.20"
