[package]
name = "pixconsola"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "*"
bitvec = "*"
transpose = "*"
itertools = "0.10.1"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
derive_more = "0.99.16"
enum-utils = "0.1.2"

