[package]
name = "pixconsola"
version = "0.1.0"
edition = "2018"
license = "MIT"
documentation = "http://paxconsola.com/book/"
homepage = "http://paxconsola.com/"
description = "Pix Consola is a CLI for converting image files to various vintage computer and console image formats."

[dependencies]
png = "0.17"
bitvec = "0.22"
transpose = "0.2"
itertools = "0.10.1"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
derive_more = "0.99.16"
enum-utils = "0.1.2"

